# psplash

./: Makefile.am  psplash-config.h  psplash.c
